Actually fix lol

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Camille Walters | Software Developer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -38,7 +38,7 @@
   <meta property="og:title" content="Camille Walters | Software Developer" />
   <meta property="og:description" content="Software Developer" />
   <meta property="og:url" content="https://camillewalters.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:site_name" content="Camille Walters | Software Developer" />
   <meta property="article:publisher" content="https://camillewalters.github.io/" />
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
   <!-- Twitter -->
@@ -47,7 +47,7 @@
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
   <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
-  <meta name="author" content="Varad Bhogayata" />
+  <meta name="author" content="Camille Walters" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
@@ -158,8 +158,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text"> Camille Walters
+      </a><span class="black-text">Software Developer</span>
     </div>
   </nav>
 
@@ -209,7 +209,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Varad Bhogayata.</span></h2>
+              <h2>Hi, I'm <span class="teal">Camille Walters.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who loves solving a very complex, very challenging real-world problems.</h5>
