--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <h2>Hi, I'm <span class="teal">Camille Walters.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who loves solving a very complex, very challenging real-world problems.</h5>
+              <h5>Is this even working</h5>
             </div>
             <div class="social">
               <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
