--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <h2>Hi, I'm <span class="teal">Camille Walters.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Is this even working</h5>
+              <h5>One line summary of me</h5>
             </div>
             <div class="social">
               <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
@@ -868,12 +868,11 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/" class="teal-text hoverline">Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a  class="teal-text hoverline">University of Waterloo</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Waterloo, Ontario, Canada</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Bachelor of Applied Science - Mechatronics Engineering
                   <br>
                   <b>CGPA: </b>3.13/4.33
                 </p>
@@ -902,30 +901,26 @@
     <section id="contact" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
+
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+918460816663</a></a>
+          <a aria-label="Email me!" href="mailto:chwalter@uwaterloo.ca" target="_blank" data-position="top"
+            data-tooltip="Email me" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email me" href="mailto:chwalter@uwaterloo.ca"
+              class="hoverline">chwalter@uwaterloo.ca</a></a>
         </p>
         <p>
-          <a aria-label="Email Camille" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Camille" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Camille" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
-        </p>
-        <p>
-          <a aria-label="View Camille on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Camille on GitHub" href="http://github.com/camillewalters" target="_blank"
+            data-position="top" data-tooltip="Check out my Github"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
+              aria-label="Check out my Github" href="http://github.com/camillewalters" class="hoverline"
               target="_blank">github.com/varadbhogayata</a></a>
         </p>
         <p>
-          <a aria-label="View Camille on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Camille on LinkedIn" href="http://linkedin.com/in/camille-walters" target="_blank"
+            data-position="top" data-tooltip="View me on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="View me on LinkedIn" href="http://linkedin.com/in/camille-walters"
+              class="hoverline" target="_blank">linkedin.com/in/camille-walters</a></a>
         </p>
       </div>
     </section>
