--- a/index.html
+++ b/index.html
@@ -879,13 +879,14 @@
 
                 <ul>
                   <p>
-                    <b>Relevant Courseworks:</b>
+                    <b>Relevant Courses:</b>
                   <ul>
                     <li>Data Structures and Algorithms</li>
-                    <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
-                    <li>Machine Learning</li>
-                    <li>Computer Vision</li>
+                    <li>Introduction to Computer Structures and Real-Time Systems</li>
+                    <li>Microprocessor Systems and Interfacing for Mechatronics Engineering</li>
+                    <li>Introduction to Microprocessors and Digital Logic</li>
+                    <li>Circuits</li>
+                    <li>Digital Computation</li>
                   </ul>
                   </p>
 
@@ -916,7 +917,7 @@
               target="_blank">github.com/varadbhogayata</a></a>
         </p>
         <p>
-          <a aria-label="View Camille on LinkedIn" href="http://linkedin.com/in/camille-walters" target="_blank"
+          <a aria-label="View me on LinkedIn" href="http://linkedin.com/in/camille-walters" target="_blank"
             data-position="top" data-tooltip="View me on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-linkedin"></i><a aria-label="View me on LinkedIn" href="http://linkedin.com/in/camille-walters"
