--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
             data-position="top" data-tooltip="Check out my Github"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
               aria-label="Check out my Github" href="http://github.com/camillewalters" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              target="_blank">github.com/camillewalters</a></a>
         </p>
         <p>
           <a aria-label="View me on LinkedIn" href="http://linkedin.com/in/camille-walters" target="_blank"
