make the colors nicer

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
     <!-- Second Section: About -->
     <section id="about" class="section scrollspy">
-      <h3 class="page-title white-text teal">About</h3>
+      <h3 class="page-title teal">About</h3>
       <div class="container flow-text">
         <!-- <blockquote>
           <h2>
@@ -284,7 +284,7 @@
 
     <!-- Third Section: Experience -->
     <section id="experience" class="section scrollspy">
-      <h3 class="page-title white-text teal">Experience</h3>
+      <h3 class="page-title teal">Experience</h3>
       <div class="container">
 
         <!-- Latest Experience -->
@@ -413,7 +413,7 @@
 
     <!-- Fourth Section: Projects -->
     <section id="projects" class="section scrollspy">
-      <h3 class="page-title white-text teal">Projects</h3>
+      <h3 class="page-title teal">Projects</h3>
       <div class="container">
         <div class="row">
 
@@ -722,7 +722,7 @@
 
     <!-- Fifth Section: Skills -->
     <section id="skills" class="section scrollspy">
-      <h3 class="page-title white-text teal">Skills</h3>
+      <h3 class="page-title teal">Skills</h3>
       <div class="container">
         <!-- Languages and Databases -->
         <div class="card">
@@ -860,7 +860,7 @@
 
     <!-- Seventh Section: Education -->
     <section id="education" class="section scrollspy">
-      <h3 class="page-title white-text teal">Education</h3>
+      <h3 class="page-title teal">Education</h3>
       <div class="container">
         <div class="row">
           <!-- Education -->
@@ -899,7 +899,7 @@
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
-      <h3 class="page-title white-text teal">Contact</h3>
+      <h3 class="page-title teal">Contact</h3>
       <div class="container">
 
         <p>
