add one experience

--- a/index.html
+++ b/index.html
@@ -293,34 +293,33 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                  <span class="card-title"><a
+                      class="teal-text hoverline">Dematic</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">AI Developer</div>
+            <div class="role brown-text text-darken-2">Virtual Facility Emulation Co-op</div>
             <ul>
               <li>
-                Improved an in-production optimization algorithm which reduced the cycle-time of the automation process.
+                Modelled Dematic warehouse logistics solutions with Unity and C#
               </li>
               <li>
-                Expanded and modularized the algorithm from one system one robot to a multi-system multi-robot paradigm.
+                Created a tool to easily verify conveyor connectivity for straight, curved and helical conveyors
               </li>
               <li>
-                Designed and developed a Video Analytics application that tracks the activity and location of each human
-                in a multi-camera environment
-                along with detailed visualization - from scratch.
+                Developed a builder to model a highly configurable solution using complex geometrical principles
               </li>
-              <li>Improved the speed of the Video Analytics application by incorporating the YOLOv3 model for object
-                detection and DeepSORT for
-                multi-object tracking.</li>
+              <li>Designed and implemented a graphical user interface for the builder, including creating custom components for the builder using XML, CSS and C\# files</li>
               <li>
-                <b>Tools:</b> Python, OpenCV, Keras, Tensorflow, PyTorch
+                Developed controller communications, including messaging handler, for emulation on a RESTful API
+              </li>
+              <li>
+                Created integration and unit tests in Unity Test Framework (NUnit) for the REST handler
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>January 2020 -December 2020 | Waterloo, ON</span>
           </div>
         </div>
 
