Add some experience

--- a/index.html
+++ b/index.html
@@ -337,70 +337,94 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.mtag.in" target="_blank"
-                      class="teal-text hoverline">Mtag
-                      Innovations</a></span>
+                      class="teal-text hoverline">Dematic</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Data Scientist</div>
+            <div class="role brown-text text-darken-2">Automated Performance Testing Co-op</div>
             <ul>
               <li>
-                Developed a cloud-based data visualization and analytics web application aimed at storing and
-                visualizing
-                data-points of each IoT devices.
+                Wrote and conducted tests using testNG to analyze proprietary materials handling software
               </li>
               <li>
-                Designed and implemented a stacking model predicting the degradation of drugs and achieved 75% - 83%
-                accuracy depending on the data
-                for each drug.
+                Wrote, maintained and utilized Ansible scripts to remotely install builds on remote servers
               </li>
               <li>
-                <b>Tools:</b> Python, IBM Cloud, Node Red, Flask
+                Created environment for automated testing using Jenkins to deploy Microsoft Azure VMs, install software to be tested, run tests, and collect results
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
+            <span>April 2019 - April 2019 | Waterloo, ON</span>
           </div>
         </div>
 
         <!-- Experience 3 -->
-        <!-- <div class="card">
+        <div class="card">
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.cignex.com" target="_blank"><img alt="Cignex logo"
-                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
+                <a href="https://www.mtag.in" target="_blank"><img alt="Mtag logo"
+                    src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" /></a>
+
               </div>
+
+              <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
-                      class="teal-text hoverline">CIGNEX
-                      Datamatics </a></span>
+                  <span class="card-title"><a href="https://www.mtag.in" target="_blank"
+                      class="teal-text hoverline">PepsiCo Beverages Canada</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
+            <div class="role brown-text text-darken-2">Quality Assurance and Maintenance Co-op</div>
             <ul>
               <li>
-                Designed a library management system for a local library, where we undertook activities like requirement
-                elicitation, preparing Data Flow
-                and Entity-Relationship diagrams.
+                Effected a multidisciplinary solution to save company $132,000 per year in raw materials
               </li>
               <li>
-                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
-                Processing and Support Vector
-                Machines with 96% accuracy on the company’s data.
-              </li>
-              <li>
-                <b>Tools:</b> Python, Scikit-learn, NLTK
+                Designed and implemented new system of organizing quality assurance documentation to facilitate the audit process
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>June 2017 - July 2017 | Ahmedabad, India</span>
+            <span>April 2019 - April 2019 | Waterloo, ON</span>
           </div>
-        </div> -->
+        </div>
+
+        <!-- Experience 4 -->
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://www.mtag.in" target="_blank"><img alt="Mtag logo"
+                    src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" /></a>
+
+              </div>
+
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="https://www.mtag.in" target="_blank"
+                      class="teal-text hoverline">PepsiCo Foods Canada</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Manufacturing Resource Manager Co-op</div>
+            <ul>
+              <li>
+                Optimized attainment, quality and safety for all Frito Lay potato chip products across a shift by managing employees, and leveraging support of other department managers
+              </li>
+              <li>
+                Lead various profitable projects, including conceptualizing, designing, assembling teams, holding team members accountable to complete projects, and reporting on their progress
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>April 2019 - April 2019 | Waterloo, ON</span>
+          </div>
+        </div>
+
 
       </div>
     </section>
