better words and photo

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/my-passport-photo-square.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/assets/img/profile.png" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -948,7 +948,8 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "ML Enthusiast", "Fast Learner"],
+      strings: ["software developer", "collaborator", "fast learner", "game developer",
+      "embedded systems designer", "mechatronics engineering student"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
