--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
     <section id="intro" class="section scrollspy full-height">
       <div class="overlay"></div>
       <div class="container">
-        <div class="col-md-9">
+        <div class="col-md-9" style="background-color: #97CAEF">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
-            <div class="caption">
+            <div class="caption" >
               <h2>Hi, I'm <span class="teal">Camille Walters.</span></h2>
               <h5 style="color:#CAFAFE">A <span class="typing" style="font-weight: 300; color:#FC4445"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
@@ -509,7 +509,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.mtag.in" target="_blank"
-                      class="teal-text hoverline">PepsiCo Beverages Canada</a></span>
+                      class="teal-text hoverline">PepsiCo Canada</a></span>
                 </p>
               </div>
             </div>
@@ -524,7 +524,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>April 2019 - April 2019 | Waterloo, ON</span>
+            <span>April 2019 - April 2019 | Mississauga, ON</span>
           </div>
         </div>
 
@@ -542,7 +542,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.mtag.in" target="_blank"
-                      class="teal-text hoverline">PepsiCo Foods Canada</a></span>
+                      class="teal-text hoverline">PepsiCo Canada</a></span>
                 </p>
               </div>
             </div>
@@ -557,7 +557,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>April 2019 - April 2019 | Waterloo, ON</span>
+            <span>April 2019 - April 2019 | Cambridge, ON</span>
           </div>
         </div>
 
@@ -890,7 +890,7 @@
                 </p>
                 <p class="brown-text">Waterloo, Ontario, Canada</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Applied Science - Mechatronics Engineering
+                  Bachelor of Applied Science - Mechatronics Engineering
                   <br>
                 </p>
 
