--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
     <!-- First Section: Heading lines and image -->
     <section id="intro" class="section scrollspy full-height">
       <div class="overlay"></div>
-      <div class="container">
-        <div class="col-md-9" style="background-color: #97CAEF">
+      <div class="container" style="background-color: #97CAEF">
+        <div class="col-md-9" >
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption" >
               <h2>Hi, I'm <span class="teal">Camille Walters.</span></h2>
