--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
   <!-- Main Content-->
   <main>
     <!-- First Section: Heading lines and image -->
-    <section id="intro" class="section scrollspy full-height">
+    <section id="intro" class="section scrollspy full-height" style="background-color: #97CAEF">
       <div class="overlay"></div>
-      <div class="container" style="background-color: #97CAEF">
+      <div class="container" >
         <div class="col-md-9" >
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption" >
