--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   <main>
     <!-- First Section: Heading lines and image -->
     <section id="intro" class="section scrollspy full-height" style="background-color: #97CAEF">
-      <div class="overlay"></div>
+    <!--  <div class="overlay"></div>-->
       <div class="container" >
         <div class="col-md-9" >
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
