rename projects section

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   <!-- Main Content-->
   <main>
     <!-- First Section: Heading lines and image -->
-    <section id="intro" class="section scrollspy full-height" style="background-color: #97CAEF">
+    <section id="intro" class="section scrollspy full-height" style="background-color: #55BCC9">
     <!--  <div class="overlay"></div>-->
       <div class="container" >
         <div class="col-md-9" >
@@ -567,7 +567,7 @@
 
     <!-- Fourth Section: Projects -->
     <section id="projects" class="section scrollspy">
-      <h3 class="page-title teal">Projects</h3>
+      <h3 class="page-title teal">Extracurricular Projects</h3>
       <div class="container">
         <div class="row">
 
@@ -890,7 +890,7 @@
                 </p>
                 <p class="brown-text">Waterloo, Ontario, Canada</p>
                 <p>
-                  Bachelor of Applied Science - Mechatronics Engineering
+                  Bachelor of Applied Science - Mechatronics Engineering Class of 2022
                   <br>
                 </p>
 
