--- a/index.html
+++ b/index.html
@@ -577,10 +577,10 @@
                 <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Music Player Web-App<i
+                <span class="card-title activator teal-text hoverline">MyMeme<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A music streaming web app based on Django
+                  A social game based in Go
                 </p>
               </div>
               <div class="card-reveal">
@@ -617,10 +617,10 @@
                 <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Quiz Web-App<i
+                <span class="card-title activator teal-text hoverline">Engineers without Borders VP Podcasts<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A quiz playing web app based on Django
+                  Leading a team of students creating thought-provoking and informative podcasts.
                 </p>
               </div>
               <div class="card-reveal">
@@ -693,10 +693,10 @@
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Blog Web-App<i
+                <span class="card-title activator teal-text hoverline">Engineering Embassadors<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A simple and extensible blog web-app based on Flask.
+                  Informing prospective students and mentoring first years
                 </p>
               </div>
               <div class="card-reveal">
@@ -732,10 +732,10 @@
                 <img alt="Screenshot of  web app" src="/assets/img/project-aim_bert-bias.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Visual Question Answering<i
+                <span class="card-title activator teal-text hoverline">Dining Buddies<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  An attention-based classification model that aims at generating an answer for a given input image.
+                  A dining accompaniment program for long term care home residents
                 </p>
               </div>
               <div class="card-reveal">
@@ -769,10 +769,10 @@
                 <img alt="Screenshot of  web app" src="/assets/img/computer-vision-v2-04.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Video Summarizer<i
+                <span class="card-title activator teal-text hoverline">Personal Website<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A Seq2Seq model that generates a short summary of the given input video.
+                  My personal website (the one you're currently reading!) using HTML and CSS
                 </p>
               </div>
               <div class="card-reveal">
@@ -806,10 +806,10 @@
                 <img alt="Screenshot of  web app" src="/assets/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Image Generator<i
+                <span class="card-title activator teal-text hoverline">Arduino<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  An image generator based on the concept of adversarial networks (GANs)
+                  Various projects using the Arduino prototyping platform.
                 </p>
               </div>
               <div class="card-reveal">
