--- a/index.html
+++ b/index.html
@@ -283,8 +283,9 @@
         <!-- Languages and Databases -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Languages and Databases</h4>
+            <h4 class="brown-text light">Languages</h4>
             <div class="row text-center">
+              <li> testtest </li>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
