--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Languages</h4>
-            <div class="row text-center">
+            <div class="row text-left">
               <li> testtest </li>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
