--- a/index.html
+++ b/index.html
@@ -285,32 +285,26 @@
           <div class="card-content">
             <h4 class="brown-text light">Languages</h4>
             <div class="row text-left">
-              <li> testtest </li>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
-              </div>
+              <li> C </li>
+              <li> C++ </li>
+              <li> C# </li>
+              <li> Python </li>
+              <li> Go </li>
+              <li> Java </li>
+              <li> CSS </li>
+              <li> USS (Unity Style Sheets) </li>
+              <li> XML </li>
+              <li> SQL </li>
+              <li> Linux </li>
+              <li> YAML </li>
+              <li> bash </li>
             </div>
           </div>
         </div>
 
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Libraries</h4>
+            <h4 class="brown-text light">Frameworks and Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
