--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
               <li> Java </li>
               <li> CSS </li>
               <li> USS (Unity Style Sheets) </li>
+              <li> JavaScript </li>
               <li> XML </li>
               <li> SQL </li>
               <li> Linux </li>
@@ -305,22 +306,15 @@
         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Frameworks and Libraries</h4>
-            <div class="row text-center">
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
-              </div>
+            <div class="row text-left">
+              <li> NUnit </li>
+              <li> testNG </li>
+              <li> Azure </li>
+              <li> Jenkins </li>
+              <li> Git </li>
+              <li> Arduino </li>
+              <li> Ansible </li>
+              <li> Latex </li>
             </div>
           </div>
         </div>
