--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
           </div>
         </div>
 
-        <!-- Frameworks -->
-        <div class="card">
+       <!-- Frameworks -->
+        <!-- <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
@@ -364,7 +364,8 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
+
 
         <!-- certifications -->
         <!-- <div class="card">
