take out other thing

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </blockquote> -->
         <p>
 
-          I am a mechatronics engineering student at the University of Waterloo. I have 1 year and 8 months of combined internship experience in relevant fields. I am passionate about software development, including game development, web development, virtualization, and embedded systems. 
+          I am a mechatronics engineering student at the University of Waterloo. I have 1 year and 8 months of combined internship experience in relevant fields. I am passionate about software development, including game development, web development, virtualization, and embedded systems. Please see below for my proficiencies and experiences.
           <!-- Detail-oriented Software Engineer with a get-it-done, on-time, and high-quality product spirit and a keen interest in Software Development and Artificial Intelligence. -->
         </p>
         <p>
@@ -322,6 +322,7 @@
         </div>
 
         <!-- Other -->
+        <!--
         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Other</h4>
