--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@
       <div class="container">
         <div class="row">
 
+          <!--MyMeme -->
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -555,7 +556,7 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, AWS S3, Heroku</li>
+                  <li><b>Tools:</b> Go, Unity, C#, Docker</li>
                   <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
                   <li>Search and filter songs based on language and singer.</li>
                   <li>Create multiple playlists and add/remove songs to/from playlist.</li>
@@ -577,13 +578,14 @@
             </div>
           </div>
 
+          <!--EWB -->
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Engineers without Borders VP Podcasts<i
+                <span class="card-title activator teal-text hoverline">Engineers Without Borders - VP Podcasts<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   Leading a team of students creating thought-provoking and informative podcasts.
@@ -613,45 +615,41 @@
               </div>
             </div>
           </div>
-
-          <!-- 1. Django Project -->
-          <!-- <div class="col s12 m6 l6">
+          <!-- Personal Website -->
+          <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="django web app" src="/assets/img/project-library-logo.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/computer-vision-v2-04.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Local Library Web-App<i
+                <span class="card-title activator teal-text hoverline">Personal Website<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A web-app that creates an online catalog for a small local library, where users can browse available books and manage their accounts.
+                  My personal website (the one you're currently reading!) using HTML and CSS
                 </p>
               </div>
               <div class="card-reveal">
-                <span class="card-title grey-text"><small>Accomplishments</small><i
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, SQLite, Django, Heroku</li>
-                  <li>Users can view list and detail information for books and authors.</li>
-                  <li>Admin users can create and manage models.</li>
-                  <li>Librarians can renew reserved books.</li>
+                  <li><b>Tools:</b> HTML, CSS, JavaScript</li>
+                  <li>Used HTML, CSS and JavaScript to design and create a website using GitHub Pages</li>
+                  <li>Designed website using UI/UX standards and concepts</li>
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://django-local-lib.herokuapp.com" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/django-local-library"
+                  <a aria-label="Visit the GitHub repo for this project" href="https://github.com/camillewalters/camillewalters.github.io"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
 
-          <!-- Flask Project -->
+          <!-- Eng Embassadors -->
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -691,7 +689,7 @@
             </div>
           </div>
 
-          <!-- VQA -->
+          <!-- Dining Buddies -->
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -728,17 +726,17 @@
             </div>
           </div>
 
-          <!-- Video Summarizer -->
+          <!-- No Shell Social -->
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/assets/img/computer-vision-v2-04.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Personal Website<i
+                <span class="card-title activator teal-text hoverline">NoShell Social<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  My personal website (the one you're currently reading!) using HTML and CSS
+                  A Unity game to help children with social anxiety gain their confidence
                 </p>
               </div>
               <div class="card-reveal">
@@ -747,16 +745,12 @@
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Incorporated CNN to detect and classify objects in the video frames and Long Short Term Memory for
-                    generating a summary.</li>
-                  <li>Evaluated the model on MSVD (Microsoft Video Description Corpus) dataset; achieved 0.77, 0.71,
-                    0.52 scores respectively on ROGUE,
-                    BLEU, METEOR evaluation metrics.</li>
+                  <li><b>Tools:</b> Unity, C#</li>
+                  <li>Uses Unity to create a VR environment that emulates a classroom setting</li></li>
 
                 </ul>
-                <!-- TODO: UPLOAD THIS PROJECT ON GITHUB -->
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for this project" href="https://github.com/camillewalters/NoShellSocial"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -765,7 +759,8 @@
             </div>
           </div>
 
-          <!-- Image Generator -->
+
+          <!-- Arduino -->
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -793,41 +788,6 @@
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
                     target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Head Counting System -->
-          <div class="col s12 m6 l6">
-            <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
-              </div>
-              <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Head Counting System<i
-                    class="mdi-navigation-more-vert right"></i></span>
-                <p>
-                  A system that calculates the attendance of the class from a panoramic image of a live classroom.
-                </p>
-              </div>
-              <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title brown-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
-                <ul>
-                  <li>Used Singular Value Decomposition for image compression; applied various image processing
-                    techniques and morphological operations to
-                    detect the number of heads.</li>
-
-                </ul>
-                <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
-                    data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
                 </div>
