--- a/index.html
+++ b/index.html
@@ -384,7 +384,41 @@
       <h3 class="page-title teal">Experience</h3>
       <div class="container">
 
-        <!-- Latest Experience -->
+        <!-- ARED -->
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="http://aredgroup.com/home" target="_blank"><img alt="Meditab logo"
+                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a
+                      class="teal-text hoverline">ARED Group</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Embedded Solution Intern</div>
+            <ul>
+              <li>
+                <b>Note:</b> this internship is through the Engineers Without Borders Virtual Talent xChange program that supports ventures in Sub-Saharan Africa
+              </li>
+              <li>
+                Research and develop pricing algorithm for mobile internet and phone charging kiosks for individuals living in low-
+                infrastructure areas
+              </li>
+              <li>
+                Research implementation for app store in internal business solution software
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>January 2021 -  Present | Kigali, Rwanda (Remote)</span>
+          </div>
+        </div>
+        <!-- Dematic -->
         <div class="card">
           <div class="card-content">
             <div class="row">
@@ -421,7 +455,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>January 2020 -December 2020 | Waterloo, ON</span>
+            <span>January 2020 - December 2020 | Waterloo, ON</span>
           </div>
         </div>
 
