add some graphics

--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="http://aredgroup.com/home" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="http://aredgroup.com/home" target="_blank"><img alt="Ared logo"
+                    src="/assets/img/ared.jpg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -423,8 +423,8 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.dematic.com/en-us/" target="_blank"><img alt="Dematic logo"
+                    src="/assets/img/dematic.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -464,15 +464,14 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.mtag.in" target="_blank"><img alt="Mtag logo"
-                    src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.dematic.com/en-us/" target="_blank"><img alt="Dematic logo"
+                    src="/assets/img/dematic.png" class="responsive-img center-block" /></a>
 
               </div>
 
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.mtag.in" target="_blank"
                       class="teal-text hoverline">Dematic</a></span>
                 </p>
               </div>
