--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
+                      <span
                       class="teal-text hoverline">Dematic</a></span>
                 </p>
               </div>
@@ -499,7 +500,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.mtag.in" target="_blank"><img alt="Mtag logo"
+                <a href="https://www.pepsico.ca/" target="_blank"><img alt="Mtag logo"
                     src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" /></a>
 
               </div>
@@ -507,7 +508,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.mtag.in" target="_blank"
+                  <span
                       class="teal-text hoverline">PepsiCo Canada</a></span>
                 </p>
               </div>
