--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a
+                  <span class="card-title"><a href="http://aredgroup.com/home" target="_blank"
                       class="teal-text hoverline">ARED Group</a></span>
                 </p>
               </div>
@@ -429,7 +429,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a
+                  <span class="card-title"><a href="https://www.dematic.com/en-us/" target="_blank"
                       class="teal-text hoverline">Dematic</a></span>
                 </p>
               </div>
@@ -473,6 +473,7 @@
               <div class="col s12 m10">
                 <p>
                       <span
+                      class="card-title"><a href="https://www.dematic.com/en-us/" target="_blank"
                       class="teal-text hoverline">Dematic</a></span>
                 </p>
               </div>
@@ -501,7 +502,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.pepsico.ca/" target="_blank"><img alt="Mtag logo"
-                    src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" /></a>
+                    src="/assets/img/pepsi.png" class="responsive-img center-block" /></a>
 
               </div>
 
@@ -509,6 +510,7 @@
               <div class="col s12 m10">
                 <p>
                   <span
+                  class="card-title"><a href="https://www.pepsico.ca/" target="_blank"
                       class="teal-text hoverline">PepsiCo Canada</a></span>
                 </p>
               </div>
@@ -533,15 +535,15 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.mtag.in" target="_blank"><img alt="Mtag logo"
-                    src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" /></a>
+                <a href="https://www.pepsico.ca/" target="_blank"><img alt="Mtag logo"
+                    src="/assets/img/pepsi.png" class="responsive-img center-block" /></a>
 
               </div>
 
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.mtag.in" target="_blank"
+                  <span class="card-title"><a href="https://www.pepsico.ca/" target="_blank"
                       class="teal-text hoverline">PepsiCo Canada</a></span>
                 </p>
               </div>
