--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="quiz app" src="/assets/img/Ewbcanada.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Engineers Without Borders - VP Podcasts<i
@@ -651,6 +651,7 @@
               </div>
             </div>
           </div>
+
           <!-- Personal Website -->
           <div class="col s12 m6 l6">
             <div class="card medium">
@@ -689,7 +690,7 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web app" src="/assets/img/project-blog-logo.jpg"
+                <img alt="Screenshot of web app" src="/assets/img/WaterlooEng.jpg"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
@@ -800,7 +801,7 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/motherboard.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Arduino<i
