add more descriptives

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
+                <img alt="music streaming app" src="/assets/img/selfie1.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">MyMeme<i
@@ -624,7 +624,7 @@
                 <span class="card-title activator teal-text hoverline">Engineers Without Borders - VP Podcasts<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Leading a team of students creating thought-provoking and informative podcasts.
+                  Leading a team of students creating thought-provoking and informative podcasts
                 </p>
               </div>
               <div class="card-reveal">
@@ -633,9 +633,11 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, Heroku</li>
-                  <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                  <li>Play Quiz and see the leaderboard</li>
+                  <li>Liase with executive team to plan activities that align with Engineers Without Borders goals</li>
+                  <li>Create and maintain the website to host the podcast</li>
+                  <li>Create podcasts, including research, booking guests, interviewing, recording and editing</li>
+                  <li>Lead and support a team of students to create quality podcasts</li>
+                  <li>Host Member Learning sessions to teach members about engineering-related topics surrounding equality in Canada</li>
 
                 </ul>
                 <div class="card-action">
@@ -706,22 +708,12 @@
                 <span class="card-title teal-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, Flask, SQLAlchemy, Postgresql, Python</li>
-                  <li>Users can view posts and contact the admin via Contact Page.</li>
-                  <li>Admin can Add, Delete, Update posts.</li>
+                  <li>Talk to prospective and incoming first-years at open-house events at the University of Waterloo</li>
+                  <li>Hosted prospective students in classes to provide an immersive experience </li>
+                  <li>Mentor first-year engineering students in areas such as academic success, course planning, mental health and student life</li>
 
 
                 </ul>
-                <div class="card-action">
-                  <a aria-label="Visit Blog website" href="https://flask-heroku-blog.herokuapp.com/" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/flask-blog"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
               </div>
             </div>
           </div>
