--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
               <li>
                 Developed a builder to model a highly configurable solution using complex geometrical principles
               </li>
-              <li>Designed and implemented a graphical user interface for the builder, including creating custom components for the builder using XML, CSS and C\# files</li>
+              <li>Designed and implemented a graphical user interface for the builder, including creating custom components for the builder using XML, CSS and C# files</li>
               <li>
                 Developed controller communications, including messaging handler, for emulation on a RESTful API
               </li>
