--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption" >
               <h2>Hi, I'm <span class="teal">Camille Walters.</span></h2>
-              <h5 style="color:#CAFAFE">A <span class="typing" style="font-weight: 300; color:#FC4445"></span></h5>
+              <h5 style="color:#CAFAFE">A<span class="typing" style="font-weight: 300; color:#FC4445"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>One line summary of me</h5>
             </div>
@@ -879,8 +879,8 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["software developer", "collaborator", "fast learner", "game developer",
-      "embedded systems designer", "mechatronics engineering student"],
+      strings: [" software developer", " collaborator", " fast learner", " game developer",
+      "n embedded systems designer", " mechatronics engineering student"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
