--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <meta property="og:url" content="https://camillewalters.github.io/" />
   <meta property="og:site_name" content="Camille Walters | Software Developer" />
   <meta property="article:publisher" content="https://camillewalters.github.io/" />
-  <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
+  <meta property="og:image" content="https://camillewalters.github.io/examples/preview.JPG" />
 
   <!-- Google Site Verification for indexing -->
   <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" />
